Client ask me to change a comment
The client asked for the comment to be change and I change the comment
*Client changed necessary because problems with code flow

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!----willy------>
  <title>Viking Surf Company</title>
 <link rel="stylesheet" type="text/css" href="myStyle.css"/>
 <script type="text/javascript">
