made changes to comment

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!----willy------>
-<!this is a comment>
+<!---this is a comment--->
  <title>Viking Surf Company</title>
 <link rel="stylesheet" type="text/css" href="myStyle.css"/>
 <script type="text/javascript">
